Command line: set line-height to fix spacing issues with new auto resizing systems

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -174,6 +174,7 @@ body {
     z-index: 1000;
     max-height: 50%;
     visibility: hidden;
+    line-height: 1.2;
 }
 
 #commandbox {
@@ -190,6 +191,7 @@ body {
     outline: none;
     resize: none;
     overflow: hidden;
+    line-height: 1.2;
 }
 
 #commandInput:focus {
